Easy Comande

=== Plugins ===
cordova-plugin-console 1.0.5 "Console"
cordova-plugin-device 1.1.4 "Device"
cordova-plugin-network-information 1.3.3 "Network Information"
cordova-plugin-splashscreen 4.0.3 "Splashscreen"
cordova-plugin-statusbar 2.2.1 "StatusBar"
cordova-plugin-whitelist 1.3.1 "Whitelist"
ionic-plugin-keyboard 2.2.1 "Keyboard"

=== Vers. 0.0.1 ===
- Menu
- Lista Ordinazioni
- Ordinazione
-- Edit
-- Add Note
-- View Note
-- Delete Order
- Add Ordinazione
-- Piatto da Menu
-- Piatto fuori Menu
-- Note

=== Vers. 1.0.2 ===
- Categorie e Piatti in cache
- Click su tutta la riga per la scelta di un Piatto
- Le informazioni di un piatto escono in popover con la descrizione in html
- Obbligatorietà campi per salvataggio Ordinazione
- Promise to Observable per le chiamate HTTP
- Fix Bug

=== Vers. 1.0.3 ===
- Fix bug in fase di creazione di un'ordinazione:
  nella cancellazione di un prodotto dal menu vengono cancellati più prodotti con lo stesso nome
- Icon e Splash
- Fix bug
- Modifica di tutte le call da GET a POST
- Modifica servizi PHP per ricervere request POST

=== Vers. 1.0.4 ===
- Struttura a TABS con "Comande" e "Menu"
- Eliminazione della "Login" e della "Home"
- Funzionalità "Refresh" nella pagina "Menu"
- Funzionalità "Add" nella pagina "Comande"
- Colore header "dark"
- Modifiche all'ordine solo se non è "completed"

=== Vers. 1.0.5 ===
- "Pull to refresh" nella pagina delle "Comande"
- Aggiunto plugin "cordova-plugin-network-information"
- Aggiornato "@ionic-native/core" alla versione "^3.8.0"