@@ -2,13 +2,15 @@ import { NgModule, ErrorHandler }                     from '@angular/core';
 import { BrowserModule }                              from '@angular/platform-browser';
 import { IonicApp, IonicModule, IonicErrorHandler }   from 'ionic-angular';
 import { HttpModule }                                 from '@angular/http';
-import { Network }                                    from '@ionic-native/network';
 
-import { EasyComandeApp }   from './app.component';
+import { Network }              from '@ionic-native/network';
+import { StatusBar }            from '@ionic-native/status-bar';
+import { SplashScreen }         from '@ionic-native/splash-screen';
 
 import { HttpService }          from '../providers/http-service';
 import { ConnectivityService }  from '../providers/connectivity-service';
 
+import { EasyComandeApp }   from './app.component';
 import { TabsPage }         from '../pages/tabs/tabs';
 import { LoginPage }        from '../pages/login/login';
 import { HomePage }         from '../pages/home/home';
@@ -19,8 +21,7 @@ import { AddPage }          from '../pages/add/add';
 
 import { ProdottiModal, PopoverPage }    from '../pages/add/prodotti/prodotti-modal';
 
-import { StatusBar }        from '@ionic-native/status-bar';
-import { SplashScreen }     from '@ionic-native/splash-screen';
+//import { AppProviders }     from './app.providers';
 
 @NgModule({
   declarations: [
@@ -53,7 +54,7 @@ import { SplashScreen }     from '@ionic-native/splash-screen';
     ProdottiModal,
     PopoverPage
   ],
-  providers: [
+  providers : [
     HttpService,
     ConnectivityService,
     StatusBar,
@@ -61,5 +62,6 @@ import { SplashScreen }     from '@ionic-native/splash-screen';
     Network,
     {provide: ErrorHandler, useClass: IonicErrorHandler}
   ]
+  //providers: AppProviders.getProviders()
 })
 export class AppModule {}
